Try to manage spells and modifiers using custom resources

--- a/Game Off 2023.csproj
+++ b/Game Off 2023.csproj
@@ -4,4 +4,7 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>GameOff2023</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Scripts\GameplayCore\Creature" />
+  </ItemGroup>
 </Project>
