Create base for an inventory system; Create ResourceId to manage core-visuals links; Use it only for spells now

--- a/Game Off 2023.csproj
+++ b/Game Off 2023.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <Folder Include="Scripts\GameplayCore\Creature" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Scripts\GameplayCore\Spells\SpellSlot.cs" />
+  </ItemGroup>
 </Project>
